# scanopy-mcp-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: USAGE.md
docs/plans/: 2026-01-05-scanopy-mcp-implementation-plan.md  2026-01-06-public-repo-readiness-plan.md  2026-01-07-mcp-cli-install-plan.md
scanopy_mcp/: __init__.py  allowlist.py  client.py  config.py  main.py  openapi_loader.py  policy.py  runtime.py  server.py  session.py  stdio_server.py  tool_registry.py  transport.py
scripts/: run_all_tools.py  smoke.py
tests/: __init__.py  test_allowlist.py  test_client.py  test_config.py  test_config_fixes.py  test_docs.py  test_dry_run.py  test_openapi_loader.py  test_openapi_loader_fixes.py  test_policy.py  test_policy_fixes.py  test_public_ready.py  test_run_all_tools.py  test_runtime.py  test_server_tools.py  test_session.py  test_smoke_script.py  test_stdio_server.py  test_tool_registry.py  test_transport.py  test_validation.py
